# lxqt-runner

./: .gitignore  AUTHORS  CHANGELOG  CMakeLists.txt  README.md  commanditemmodel.cpp  commanditemmodel.h  dialog.cpp  dialog.h  dialog.ui  lxqt-runner.ts  lxqt-runner_ar.ts  lxqt-runner_ca.ts  lxqt-runner_cs.ts  lxqt-runner_cs_CZ.ts  lxqt-runner_da.ts  lxqt-runner_da_DK.ts  lxqt-runner_de.ts  lxqt-runner_el.ts  lxqt-runner_eo.ts  lxqt-runner_es.ts  lxqt-runner_es_VE.ts  lxqt-runner_eu.ts  lxqt-runner_fi.ts  lxqt-runner_fr.ts  lxqt-runner_fr_FR.ts  lxqt-runner_hu.ts  lxqt-runner_ia.ts  lxqt-runner_id.ts  lxqt-runner_id_ID.ts  lxqt-runner_it.ts  lxqt-runner_ja.ts  lxqt-runner_ko.ts  lxqt-runner_lt.ts  lxqt-runner_nl.ts  lxqt-runner_pl.ts  lxqt-runner_pl_PL.ts  lxqt-runner_pt.ts  lxqt-runner_pt_BR.ts  lxqt-runner_ro_RO.ts  (+22 more)
autostart/: CMakeLists.txt  lxqt-runner.desktop  lxqt-runner.desktop.in
autostart/translations/: lxqt-runner_ar.desktop  lxqt-runner_ar.desktop.yaml  lxqt-runner_bg.desktop.yaml  lxqt-runner_ca.desktop.yaml  lxqt-runner_cs.desktop  lxqt-runner_cs.desktop.yaml  lxqt-runner_cs_CZ.desktop  lxqt-runner_da.desktop  lxqt-runner_da_DK.desktop  lxqt-runner_de.desktop.yaml  lxqt-runner_de_DE.desktop  lxqt-runner_el.desktop.yaml  lxqt-runner_el_GR.desktop  lxqt-runner_en_GB.desktop.yaml  lxqt-runner_eo.desktop  lxqt-runner_eo.desktop.yaml  lxqt-runner_es.desktop  lxqt-runner_es.desktop.yaml  lxqt-runner_es_VE.desktop  lxqt-runner_es_VE.desktop.yaml  lxqt-runner_et.desktop.yaml  lxqt-runner_eu.desktop  lxqt-runner_eu.desktop.yaml  lxqt-runner_fi.desktop  lxqt-runner_fi.desktop.yaml  lxqt-runner_fr.desktop.yaml  lxqt-runner_fr_FR.desktop  lxqt-runner_he.desktop.yaml  lxqt-runner_hr.desktop.yaml  lxqt-runner_hu.desktop  lxqt-runner_hu.desktop.yaml  lxqt-runner_is.desktop.yaml  lxqt-runner_it.desktop.yaml  lxqt-runner_it_IT.desktop  lxqt-runner_ja.desktop  lxqt-runner_ja.desktop.yaml  lxqt-runner_ka.desktop.yaml  lxqt-runner_kab.desktop.yaml  lxqt-runner_kk.desktop.yaml  lxqt-runner_ko.desktop.yaml  (+31 more)
cmake/: LxQtTranslate.cmake
configuredialog/: configuredialog.cpp  configuredialog.h  configuredialog.ui
man/: lxqt-runner.1
translations/: CMakeLists.txt  lxqt-runner.ts  lxqt-runner.ts.src  lxqt-runner_ar.ts  lxqt-runner_arn.ts  lxqt-runner_ast.ts  lxqt-runner_bg.ts  lxqt-runner_ca.ts  lxqt-runner_cs.ts  lxqt-runner_cs_CZ.ts  lxqt-runner_cy.ts  lxqt-runner_da.ts  lxqt-runner_da_DK.ts  lxqt-runner_de.ts  lxqt-runner_de_DE.ts  lxqt-runner_el.ts  lxqt-runner_el_GR.ts  lxqt-runner_en_GB.ts  lxqt-runner_eo.ts  lxqt-runner_es.ts  lxqt-runner_es_VE.ts  lxqt-runner_et.ts  lxqt-runner_eu.ts  lxqt-runner_fi.ts  lxqt-runner_fr.ts  lxqt-runner_fr_FR.ts  lxqt-runner_gl.ts  lxqt-runner_he.ts  lxqt-runner_hi.ts  lxqt-runner_hr.ts  lxqt-runner_hu.ts  lxqt-runner_ia.ts  lxqt-runner_id.ts  lxqt-runner_id_ID.ts  lxqt-runner_is.ts  lxqt-runner_it.ts  lxqt-runner_it_IT.ts  lxqt-runner_ja.ts  lxqt-runner_ka.ts  lxqt-runner_kab.ts  (+30 more)
